# graphics-engine

./: CMakeLists.txt  glad.c  main.cpp
include/: glad.h
res/: Sample.shader
src/: Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
